# Firecourt-Cubes

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.190ea3f  README.md  custommenubar.cpp  custommenubar.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectclass.cpp  projectclass.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  ui_mainwindow.h  ui_settingsdialog.h
.cache/clangd/index/: graphics_init.cpp.0D60E784406A7542.idx  graphics_init.h.20F9E9AF5CA22C37.idx  main.cpp.F8B66E4DA3563162.idx  mainwindow.cpp.556D0EC0D0918D6D.idx  mainwindow.h.76B683E76F60860B.idx  project.cpp.A030AB5320D59E4D.idx  project.h.082C0AC4F4D8F5B1.idx  settingsdialog.cpp.D9E4F806784EDDA8.idx  settingsdialog.h.286A6D35D2D5F509.idx  ui_mainwindow.h.441D850B003C0443.idx  ui_settingsdialog.h.F58244E90BC092BC.idx
Renet/: HELP.md  build.gradle.kts  compose.yaml  pom.xml  settings.gradle.kts
Renet/src/main/java/Renet/: RenetApplication.java
Renet/src/main/java/Renet/entities/: AudioCall.java  Auth.java  GUI.java  JNIBind.java  Message.java  Settings.java  Share.java  ThemeManager.java  User.java  VideoCall.java  WebModule.java
Renet/src/main/kotlin/Renet/: RenetApplication.kt
Renet/src/main/resources/: application.properties
Renet/src/test/java/Renet/: RenetApplicationTests.java
Renet/src/test/kotlin/Renet/: RenetApplicationTests.kt
Renet/src/test/resources/contracts/: contract.yaml
ai_module/: model1.py
include/: appearancesettingsdialog.h  applicationmode.h  customdialog.h  effectsdialog.h  eqdialog.h  findreplacedialog.h  group.h  instrumentsdialog.h  layout.h  mainwindow.h  mainwindow.ui  p1.xml  project.h  settingsdialog.h  templatesdialog.h  terminaldialog.h  track.h  trackviewmode.h  tutordialog.h  ui_mainwindow.h  ui_settingsdialog.h
src/: appearancesettingsdialog.cpp  applicationmode.cpp  customdialog.cpp  effectsdialog.cpp  eqdialog.cpp  findreplacedialog.cpp  instrumentsdialog.cpp  layout.cpp  layout.h  main.cpp  mainwindow.cpp  mainwindow.ui  project.cpp  settingsdialog.cpp  settingsdialog.ui  templatesdialog.cpp  terminaldialog.cpp  track.cpp  trackviewmode.cpp  tutordialog.cpp
src/core/: graphics_init.cpp  graphics_init.h
